@@ -265,6 +265,9 @@ Release 2.6.0 - UNRELEASED
     HADOOP-10816. KeyShell returns -1 on error to the shell, should be 1.
     (Mike Yoder via wang)
 
+    HADOOP-10826. Iteration on KeyProviderFactory.serviceLoader is
+    thread-unsafe. (benoyantony viat tucu)
+
 Release 2.5.0 - 2014-08-11
 
   INCOMPATIBLE CHANGES
